--- a/app/src/main/res/layout/weather_forecast_view.xml
+++ b/app/src/main/res/layout/weather_forecast_view.xml
@@ -5,7 +5,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:padding="8dp"
+    android:background="@drawable/background_substrate_light_gray">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/temperatureContainer"
