--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -82,16 +82,25 @@
 
         <TextView
             android:id="@+id/shoppingListsView"
+            style="@style/MainScreenSticker"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/calendarView"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginTop="20dp"
-            android:padding="16dp"
-            android:textSize="20sp"
-            android:background="@drawable/background_sticker"
             android:text="@string/shopping_list"
-            android:onClick="@{() -> viewModel.onShoppingListClick()}"/>
+            android:onClick="@{() -> viewModel.onShoppingListClick()}" />
+
+        <TextView
+            android:id="@+id/postAddressesView"
+            style="@style/MainScreenSticker"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/shoppingListsView"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginTop="8dp"
+            android:text="@string/post_addresses"
+            android:onClick="@{() -> viewModel.onPostAddressesClick()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
