--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -17,10 +17,21 @@
             style="@style/Text.ScreenTitle"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/addPostAddressButton"
+            app:layout_constraintBottom_toBottomOf="@id/addPostAddressButton"
             app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="16dp"
             android:text="@string/post_addresses" />
+
+        <ImageButton
+            android:id="@+id/addPostAddressButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:src="@drawable/icon_plus_green"
+            android:background="@null"
+            android:onClick="@{() -> viewModel.onAddPostAddressClick()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
