--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <data>
         <variable
             name="viewModel"
@@ -32,6 +33,15 @@
             android:src="@drawable/icon_plus_green"
             android:background="@null"
             android:onClick="@{() -> viewModel.onAddPostAddressClick()}" />
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/postAddressListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/addPostAddressButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/post_address_list_item" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
