--- a/app/src/main/res/layout/fragment_post_addresses.xml
+++ b/app/src/main/res/layout/fragment_post_addresses.xml
@@ -34,6 +34,28 @@
             android:background="@null"
             android:onClick="@{() -> viewModel.onAddPostAddressClick()}" />
 
+        <LinearLayout
+            android:id="@+id/addAddressesTitleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/addPostAddressButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            app:booleanVisibility="@{!viewModel.isAddressListVisible()}">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:text="@string/add_postal_addresses_and_send_letters" />
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/icon_letter_blue" />
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/postAddressListView"
             android:layout_width="match_parent"
@@ -41,7 +63,8 @@
             app:layout_constraintTop_toBottomOf="@id/addPostAddressButton"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/post_address_list_item" />
+            tools:listitem="@layout/post_address_list_item"
+            app:booleanVisibility="@{viewModel.isAddressListVisible()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
