--- a/app/src/main/res/layout/fragment_shopping_list.xml
+++ b/app/src/main/res/layout/fragment_shopping_list.xml
@@ -63,6 +63,28 @@
             android:clickable="true"
             android:onClick="@{() -> viewModel.onAddShoppingListItemClick()}"/>
 
+        <LinearLayout
+            android:id="@+id/makeShoppingListsTitleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/addShoppingListItemButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            app:booleanVisibility="@{!viewModel.isShoppingListVisible()}">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:text="@string/make_shopping_lists_title" />
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/icon_shopping_cart_blue" />
+        </LinearLayout>
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/shoppingListView"
             android:layout_width="match_parent"
@@ -71,7 +93,8 @@
             app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginTop="16dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/shopping_list_item" />
+            tools:listitem="@layout/shopping_list_item"
+            app:booleanVisibility="@{viewModel.isShoppingListVisible()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
