--- a/app/src/main/res/layout/calendar_day_layout.xml
+++ b/app/src/main/res/layout/calendar_day_layout.xml
@@ -3,13 +3,13 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="36dp"
+    android:layout_height="36dp">
 
     <View
         android:id="@+id/selectedBackground"
-        android:layout_width="36dp"
-        android:layout_height="36dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintTop_toTopOf="@id/dayText"
         app:layout_constraintBottom_toBottomOf="@id/dayText"
         app:layout_constraintStart_toStartOf="@id/dayText"
@@ -32,9 +32,9 @@
         android:id="@+id/noteIcon"
         android:layout_width="6dp"
         android:layout_height="6dp"
-        app:layout_constraintBottom_toBottomOf="@id/selectedBackground"
-        app:layout_constraintEnd_toEndOf="@id/selectedBackground"
-        android:layout_marginTop="-4dp"
+        app:layout_constraintTop_toBottomOf="@id/dayText"
+        app:layout_constraintStart_toStartOf="@id/dayText"
+        app:layout_constraintEnd_toEndOf="@id/dayText"
         android:background="@drawable/notes_icon_view_for_calendar_day"
         android:visibility="invisible" />
 
