--- a/app/src/main/res/layout/fragment_add_edit_post_address.xml
+++ b/app/src/main/res/layout/fragment_add_edit_post_address.xml
@@ -15,13 +15,24 @@
         <EditText
             android:id="@+id/addresseeNameInput"
             style="@style/Input"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/pickContactButton"
             android:inputType="text"
             android:singleLine="true"
             android:hint="@string/addressee_name"
             android:text="@={viewModel.addresseeName}" />
+
+        <ImageButton
+            android:id="@+id/pickContactButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toTopOf="@id/addresseeNameInput"
+            app:layout_constraintBottom_toBottomOf="@id/addresseeNameInput"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/icon_contact_blue" />
 
         <EditText
             android:id="@+id/addresseeStreetInput"
