--- a/app/src/main/res/layout/fragment_add_edit_post_address.xml
+++ b/app/src/main/res/layout/fragment_add_edit_post_address.xml
@@ -116,7 +116,21 @@
             android:layout_marginTop="8dp"
             android:src="@drawable/icon_plus_green"
             android:background="@null"
-            android:onClick="@{() -> viewModel.onSavePostAddressClick()}" />
+            android:onClick="@{() -> viewModel.onSavePostAddressClick()}"
+            booleanVisibility="@{viewModel.isAddButtonVisible()}" />
+
+        <ImageButton
+            android:id="@+id/savePostAddressButton"
+            android:layout_width="48dp"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toBottomOf="@id/addresseePostcodeInput"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginTop="8dp"
+            android:src="@drawable/icon_check_green"
+            android:background="@null"
+            android:onClick="@{() -> viewModel.onSavePostAddressClick()}"
+            booleanVisibility="@{!viewModel.isAddButtonVisible()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
