--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -61,17 +61,17 @@
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/addNotesContainer"
+                android:id="@+id/addNoteContainer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/dateWeatherContainer"
                 app:layout_constraintStart_toStartOf="parent"
                 android:layout_marginTop="16dp"
-                app:booleanVisibility="@{!viewModel.notesVisible}"
-                android:onClick="@{() -> viewModel.onAddNotesClick()}">
+                app:booleanVisibility="@{!viewModel.noteVisible}"
+                android:onClick="@{() -> viewModel.onAddNoteClick()}">
 
                 <ImageView
-                    android:id="@+id/addNotesButton"
+                    android:id="@+id/addNoteButton"
                     android:layout_width="48dp"
                     android:layout_height="48dp"
                     app:layout_constraintTop_toTopOf="parent"
@@ -79,52 +79,52 @@
                     android:src="@drawable/icon_plus_green" />
 
                 <TextView
-                    android:id="@+id/addNotesTextView"
+                    android:id="@+id/addNoteTextView"
                     style="@style/Text.MainControlsHint"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    app:layout_constraintStart_toEndOf="@id/addNotesButton"
-                    app:layout_constraintTop_toTopOf="@id/addNotesButton"
-                    app:layout_constraintBottom_toBottomOf="@id/addNotesButton"
+                    app:layout_constraintStart_toEndOf="@id/addNoteButton"
+                    app:layout_constraintTop_toTopOf="@id/addNoteButton"
+                    app:layout_constraintBottom_toBottomOf="@id/addNoteButton"
                     android:text="@string/add_note" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/notesContainer"
+                android:id="@+id/noteContainer"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 app:layout_constraintTop_toBottomOf="@id/dateWeatherContainer"
                 android:layout_marginTop="16dp"
-                app:booleanVisibility="@{viewModel.notesVisible}">
+                app:booleanVisibility="@{viewModel.noteVisible}">
 
                 <com.example.lifediary.ui.common.RollOutTextPanel
-                    android:id="@+id/notesView"
+                    android:id="@+id/noteView"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     app:layout_constraintTop_toTopOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@id/editNotesButton"
-                    app:text="@{viewModel.notesText}" />
+                    app:layout_constraintEnd_toStartOf="@id/editNoteButton"
+                    app:text="@{viewModel.noteText}" />
 
                 <ImageView
-                    android:id="@+id/editNotesButton"
+                    android:id="@+id/editNoteButton"
                     android:layout_width="40dp"
                     android:layout_height="32dp"
-                    app:layout_constraintTop_toTopOf="@id/notesView"
-                    app:layout_constraintEnd_toStartOf="@id/deleteNotesButton"
+                    app:layout_constraintTop_toTopOf="@id/noteView"
+                    app:layout_constraintEnd_toStartOf="@id/deleteNoteButton"
                     android:paddingStart="8dp"
                     android:src="@drawable/icon_edit_blue"
-                    android:onClick="@{() -> viewModel.onEditNotesClick()}" />
+                    android:onClick="@{() -> viewModel.onEditNoteClick()}" />
 
                 <ImageView
-                    android:id="@+id/deleteNotesButton"
+                    android:id="@+id/deleteNoteButton"
                     android:layout_width="32dp"
                     android:layout_height="32dp"
-                    app:layout_constraintTop_toTopOf="@id/notesView"
+                    app:layout_constraintTop_toTopOf="@id/noteView"
                     app:layout_constraintEnd_toEndOf="parent"
                     android:src="@drawable/icon_delete_red"
-                    android:onClick="@{() -> viewModel.onDeleteNotesClick()}" />
+                    android:onClick="@{() -> viewModel.onDeleteNoteClick()}" />
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
