--- a/app/src/main/res/layout/fragment_main_notes.xml
+++ b/app/src/main/res/layout/fragment_main_notes.xml
@@ -13,7 +13,57 @@
         android:layout_height="match_parent"
         style="@style/ScreenContainer">
 
+        <ImageButton
+            android:id="@+id/addNoteButton"
+            android:layout_width="wrap_content"
+            android:layout_height="48dp"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            android:background="@drawable/icon_plus_green"
+            android:onClick="@{() -> viewModel.onAddNoteClick()}" />
 
+        <ImageButton
+            android:id="@+id/clearAllButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:layout_constraintTop_toTopOf="@id/addNoteButton"
+            app:layout_constraintBottom_toBottomOf="@id/addNoteButton"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:background="@drawable/icon_delete_sweep_color_link"
+            android:onClick="@{() -> viewModel.onClearNotesClick()}" />
+
+        <LinearLayout
+            android:id="@+id/makeNotesTitleView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@id/addNoteButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:orientation="vertical"
+            app:booleanVisibility="@{!viewModel.isNotesVisible()}">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textAlignment="center"
+                android:textSize="16sp"
+                android:text="@string/no_notes_yet" />
+
+            <ImageView
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_gravity="center"
+                android:src="@drawable/icon_sentiment_dissatisfied_gray" />
+        </LinearLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/noteListView"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toBottomOf="@id/addNoteButton"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="16dp"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+            tools:listitem="@layout/main_note_list_item"
+            app:booleanVisibility="@{viewModel.isNotesVisible()}" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
