--- a/app/src/main/res/layout/main_note_list_item.xml
+++ b/app/src/main/res/layout/main_note_list_item.xml
@@ -20,24 +20,24 @@
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/editNoteButton"
+            android:layout_marginEnd="8dp"
             app:text="@{viewModel.mainNoteListItem.text}" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/editNoteButton"
-            android:layout_width="40dp"
+            android:layout_width="32dp"
             android:layout_height="32dp"
             app:layout_constraintTop_toTopOf="@id/noteView"
             app:layout_constraintEnd_toStartOf="@id/deleteNoteButton"
-            android:paddingStart="8dp"
-            android:src="@drawable/icon_edit_blue" />
+            android:background="@drawable/icon_edit_blue" />
 
-        <ImageView
+        <ImageButton
             android:id="@+id/deleteNoteButton"
             android:layout_width="32dp"
             android:layout_height="32dp"
             app:layout_constraintTop_toTopOf="@id/noteView"
             app:layout_constraintEnd_toEndOf="parent"
-            android:src="@drawable/icon_delete_red" />
+            android:background="@drawable/icon_delete_red" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
