Add/Edit date note screen: fixed layout

--- a/app/src/main/res/layout/fragment_calendar_date.xml
+++ b/app/src/main/res/layout/fragment_calendar_date.xml
@@ -15,9 +15,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/ScreenContainer"
-            android:paddingStart="16dp"
-            android:paddingEnd="16dp">
+            style="@style/ScreenContainer">
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/dateWeatherContainer"
