--- a/app/src/main/res/layout/fragment_add_edit_date_note.xml
+++ b/app/src/main/res/layout/fragment_add_edit_date_note.xml
@@ -18,9 +18,10 @@
             android:id="@+id/addNoteInputContainer"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toTopOf="@id/buttonsContainer"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toStartOf="@id/buttonsContainer">
+            app:layout_constraintEnd_toStartOf="@id/buttonsContainer"
+            android:layout_marginTop="6dp">
             <EditText
                 android:id="@+id/addNoteInput"
                 style="@style/Input"
@@ -33,9 +34,9 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/buttonsContainer"
-            android:layout_width="48dp"
-            android:layout_height="48dp"
-            app:layout_constraintTop_toTopOf="@id/addNoteInputContainer"
+            android:layout_width="52dp"
+            android:layout_height="52dp"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent">
 
             <ImageView
