--- a/app/src/main/res/layout/shopping_list_item.xml
+++ b/app/src/main/res/layout/shopping_list_item.xml
@@ -21,16 +21,17 @@
         <TextView
             android:id="@+id/titleView"
             android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_height="0dp"
+            app:layout_constraintTop_toTopOf="@id/controls"
+            app:layout_constraintBottom_toBottomOf="@id/controls"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/controls"
             android:layout_marginEnd="10dp"
-            android:textAlignment="viewStart"
+            android:gravity="start|center_vertical"
             android:includeFontPadding="false"
             android:ellipsize="marquee"
             android:singleLine="true"
+            android:textSize="18sp"
             tools:text="Масло сливочное 2шт."
             android:text="@{viewModel.shoppingListItem.text}" />
 
@@ -60,8 +61,8 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp">
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp">
                 <ImageView
                     android:id="@+id/setHighPriorityButton"
                     android:layout_width="24dp"
@@ -77,8 +78,8 @@
                 app:layout_constraintBottom_toBottomOf="@id/setHighPriorityButtonContainer"
                 app:layout_constraintEnd_toStartOf="@id/setHighPriorityButtonContainer"
                 android:layout_marginEnd="10dp"
-                android:paddingTop="16dp"
-                android:paddingBottom="16dp">
+                android:paddingTop="4dp"
+                android:paddingBottom="4dp">
                 <ImageView
                     android:id="@+id/deleteButton"
                     android:layout_width="24dp"
