--- a/app/src/main/res/layout/to_do_list_item.xml
+++ b/app/src/main/res/layout/to_do_list_item.xml
@@ -15,49 +15,73 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:paddingStart="8dp"
-        android:paddingEnd="8dp"
         android:background="@drawable/background_shopping_list_item">
 
-        <CheckBox
-            android:id="@+id/isDoneCheckbox"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <TextView
-            android:id="@+id/titleView"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/textContainer"
             android:layout_width="0dp"
-            android:layout_height="0dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@id/isDoneCheckbox"
-            app:layout_constraintEnd_toStartOf="@id/deleteButtonContainer"
-            android:layout_marginStart="8dp"
-            android:layout_marginEnd="8dp"
-            android:gravity="start|center_vertical"
-            android:includeFontPadding="false"
-            android:ellipsize="marquee"
-            android:singleLine="true"
-            android:textSize="18sp"
-            tools:text="Погладить котика"
-            android:text="@{viewModel.toDoListItem.text}" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toStartOf="@id/deleteButtonContainer">
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:id="@+id/doneIconsContainer"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent">
+                <ImageView
+                    android:id="@+id/notDoneIconView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/icon_empty_check_box_gray"
+                    app:booleanVisibility="@{!viewModel.checked}" />
+                <ImageView
+                    android:id="@+id/doneIconView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:src="@drawable/icon_check_green"
+                    app:booleanVisibility="@{viewModel.checked}" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <TextView
+                android:id="@+id/titleView"
+                android:layout_width="0dp"
+                android:layout_height="0dp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toEndOf="@id/doneIconsContainer"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:gravity="start|center_vertical"
+                android:includeFontPadding="false"
+                android:ellipsize="marquee"
+                android:singleLine="true"
+                android:textSize="18sp"
+                android:textColor="@{viewModel.checked ? @color/app_green : @color/app_dark_gray}"
+                tools:text="Погладить котика"
+                android:text="@{viewModel.toDoListItem.text}" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <FrameLayout
             android:id="@+id/deleteButtonContainer"
-            android:layout_width="24dp"
+            android:layout_width="32dp"
             android:layout_height="match_parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:paddingTop="8dp"
-            android:paddingBottom="8dp">
-            <ImageView
+            android:paddingBottom="8dp"
+            android:paddingEnd="8dp"
+            android:clickable="true">
+            <ImageButton
                 android:id="@+id/deleteButton"
                 android:layout_width="24dp"
                 android:layout_height="24dp"
-                android:src="@drawable/icon_delete_gray" />
+                android:background="@drawable/icon_delete_gray" />
         </FrameLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
